- added alnum_upper and alnum_lower options to random_string() function (string helper) -- added to user guide
- fixed class_exists($model, false) // autoload false bug in private loader::_model() function.
- depreciated encrypt class sha1 function , renamed hash() method as hash_encode. (thanks to phpyuz for good suggestions)
//-----------------------------------------------------------------------------


@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.
forexample ...

    /**
    * Validate captcha image.
    * 
    * @return  boolean
    */
    public function captcha_check()
    {
    
    }

@todo .. postgreSQL connection bug ...
@todo .. try multiple db connection in same database query
@todo .. rename ob class as Obullo , fix instance name as Obullo::instance() 
@todo .. put archived doc meta tag to old user guide base layout ..
$todo .. look at globally set database object from app_controller.
@todo .. upload class security fix
@todo .. depreciate ob::instance() function and use this() funtion everywhere. 
@todo .. start extends Form_controller.. an autload function will load forms.. from /parents folder.
developer should be edit all forms in same directory .. 


@next todo .. db_item() function shodul be set in config class, so user can change database config 
items globally like this in global_controller ..
$this->config->set_db_item();

@next add user_guide pages to svn as static html.
@next version todo .. pager class   
@next version todo .. datamapper class
@next version todo .. add set_callback('function', param1, param1..) instead of set_rules('|callback_function')
@next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 
@next version todo .. firewall class, or any php errors should be show an error inside view() function... blabla
